--- a/static/style.css
+++ b/static/style.css
@@ -22,6 +22,7 @@
 @lightGray: #f9f9fe;
 @whiteHorbito : #f7f7f7;
 
+
 *{
   font-family: 'Lato';
   letter-spacing: 0.02em;
@@ -3128,7 +3129,7 @@ span.preferences-card-subscribe-text{
       .card-content:hover{
 
         .right:hover{
-          background: rgba(0,0,0,.15);
+          background: @lightGray;
           color: @blueHorbito;
         }
         .right{
@@ -3538,6 +3539,377 @@ span.preferences-card-subscribe-text{
 
 /* CONFIGURATION ZONE START */
 
+.config{
+
+  .ui-btn{
+    span{
+      margin-top: 7px;
+    }
+  }
+  display: none;
+
+  .preferences-bottom-content-title{
+    display: flex;
+    height: 40px;
+
+    .title-icon{
+      width: 36px;
+      height: 36px;
+      background: url('@static/icono-hdd-titulo.png') no-repeat;
+      background-size: 36px 36px;
+      background-position: 0px 0px;
+      border: none;
+
+      .title-icon-figure{
+
+      }
+    }
+    .title{
+      font-weight: bold;
+      text-align: left;
+      font-size: 40px;
+      margin-left: 10px;
+    }
+
+  }
+
+
+  .preferences-bottom-content-body{
+    display: block;
+    height: 360px;
+    margin: 20px 10px 20px 0px;
+
+    .configuration-card{
+      background: white;
+      width: 370px;
+      box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.05);
+      display: block;
+      position: absolute;
+      -webkit-border-radius: 6px;
+      -moz-border-radius: 6px;
+      border-radius: 6px;
+
+    }
+    .configuration-card.long{
+      height: 205px;
+    }
+    .configuration-card.normal{
+      height: 140px;
+    }
+    .configuration-card.short{
+      height: 70px;
+    }
+
+    .selectLanguage{
+      top: 0px;
+      left: 0px;
+      display: block;
+
+        .head{
+          height: 40px;
+          .title{
+            font-size: 20px;
+            font-weight: bold;
+            position: absolute;
+            left: 20px;
+            top: 13px;
+            color: @darkHorbito;
+            text-align: left;
+          }
+        }
+        .content{
+
+          width: 300px;
+          height: calc(100% - 40px);
+          margin: 0px auto;
+
+          .flag *{
+            cursor:pointer;
+          }
+
+          .flag{
+            width: 140px;
+            height: 120px;
+            position: absolute;
+            top: 50px;
+            font-size: 15px;
+            font-weight: bold;
+
+              .tick{
+                display: none;
+                z-index: 2;
+                position: absolute;
+                width: 25px;
+                height: 25px;
+                top: 11px;
+                right: 10px;
+                border-radius: 100%;
+                background: @redHorbito;
+              }
+
+              .flag-image{
+                position: absolute;
+                top: 22px;
+                left: 20px;
+                right: 0px;
+                width: 100px;
+                height: 65px;
+              }
+
+              .flag-language{
+                text-align: center;
+                width: 140px;
+                position: absolute;
+                bottom: 10px;
+              }
+          }
+
+          .flag.active{
+            .tick{
+              display: block;
+            }
+          }
+
+          .flag:hover{
+            background: @lightGray;
+            border-radius: 6px;
+          }
+
+          .en{
+            left: 35px;
+            .flag-image{
+              background: url('@static/english.png') no-repeat;
+              background-size: 98px 62px;
+            }
+          }
+          .es{
+            right: 35px;
+            .flag-image{
+              background: url('@static/Spanish.png') no-repeat;
+              background-size: 292px 62px;
+            }
+          }
+        }
+
+    }
+
+
+    .selectExtensions{
+      top: 0px;
+      right: 20px;
+      display: block;
+
+      .head{
+        height: 40px;
+
+        .title{
+          font-size: 20px;
+          font-weight: bold;
+          position: absolute;
+          left: 20px;
+          top: 13px;
+          color: @darkHorbito;
+          text-align: left;
+        }
+
+        .switch {
+          position: absolute;
+          right: 20px;
+          display: inline-block;
+          width: 50px;
+          top: 12px;
+          height: 25px;
+        }
+
+
+        .switch input {
+          display:none;
+        }
+
+
+        .slider {
+          position: absolute;
+          cursor: pointer;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background-color: @gray1;
+          -webkit-transition: .4s;
+          transition: .4s;
+        }
+
+        .slider:before {
+          position: absolute;
+          content: "";
+          height: 17px;
+          width: 17px;
+          left: 6px;
+          bottom: 4px;
+          background-color: white;
+          -webkit-transition: .4s;
+          transition: .4s;
+        }
+
+        input:checked + .slider {
+          background-color: @blueHorbitoActive;
+        }
+
+        input:focus + .slider {
+          box-shadow: 0 0 1px @blueHorbitoActive;
+        }
+
+        input:checked + .slider:before {
+          -webkit-transform: translateX(22px);
+          -ms-transform: translateX(22px);
+          transform: translateX(22px);
+        }
+
+        .slider.round {
+          border-radius: 34px;
+        }
+
+        .slider.round:before {
+          border-radius: 50%;
+        }
+
+      }
+      .content{
+        height: calc(100% - 40px);
+        text-align: left;
+        color: @gray1;
+        padding: 30px;
+      }
+    }
+    .backup{
+      top: 170px;
+      right: 20px;
+      display: block;
+
+      .head{
+        height: 40px;
+
+        .title{
+          font-size: 20px;
+          font-weight: bold;
+          position: absolute;
+          left: 20px;
+          top: 13px;
+          color: @darkHorbito;
+          text-align: left;
+        }
+
+      }
+      .content-description{
+
+        height: calc(100% - 80px);
+        text-align: left;
+        color: @gray1;
+        width: 326px;
+        padding: 30px;
+
+      }
+      .footer{
+        height: 40px;
+
+        .download{
+          position: absolute;
+          bottom: 10px;
+          right: 10px;
+        }
+      }
+    }
+    .desktopApp{
+      top: 235px;
+      left: 0px;
+
+      .head{
+        height: 40px;
+        display: flex;
+
+        .icon-title{
+          height: 30px;
+          top: 15px;
+          left: 25px;
+          position: absolute;
+          width: 30px;
+          background: @redHorbito;
+        }
+
+        .title{
+          font-size: 20px;
+          font-weight: bold;
+          position: absolute;
+          left: 63px;
+          top: 19px;
+          color: @darkHorbito;
+          text-align: left;
+        }
+
+      }
+      .content-description{
+
+        height: calc(100% - 80px);
+        text-align: left;
+        color: @gray1;
+        width: 326px;
+        padding: 30px;
+
+      }
+      .footer{
+        height: 40px;
+
+        .download{
+          position: absolute;
+          bottom: 10px;
+          right: 10px;
+        }
+      }
+
+
+
+    }
+    .deleteAccount{
+      top: 405px;
+      right: 20px;
+      bottom: 10px;
+
+      .head{
+        height: 40px;
+        display: flex;
+
+        .title{
+          font-size: 20px;
+          font-weight: bold;
+          position: absolute;
+          left: 20px;
+          top: 24px;
+          color: @darkHorbito;
+          text-align: left;
+        }
+
+        .delete *:hover{
+          cursor:pointer;
+          text-decoration: underline;
+        }
+
+        .delete{
+          cursor: pointer;
+          position: absolute;
+          right: 20px;
+          top: 27px;
+          color: @redHorbito
+        }
+
+      }
+    }
+  }
+
+
+}
+
+
+/*
 .preferences-bottom-content.config{
 
     display: none;
@@ -3819,7 +4191,7 @@ span.preferences-card-subscribe-text{
     vertical-align: top;
 
 }
-
+*/
 /* CONFIGURATION ZONE FINISH */
 
 /* CUSTOMIZE ZONE START */
@@ -4060,125 +4432,132 @@ span.preferences-card-subscribe-text{
 /* CUSTOMIZE ZONE FINISH */
 
 /* INVITE ZONE START */
-.invite.preferences-bottom-content{
+
+
+.invite{
   display: none;
-  opacity: 0;
-}
 
+  .preferences-bottom-content-title{
+    display: flex;
+    height: 40px;
 
-.invite .left-side{
-  float: left;
-  height: 100%;
-  width: ~'calc(60% - 20px)';
-  padding-right: 20px;
-}
+    .title-icon{
+      width: 36px;
+      height: 36px;
+      background: url('@static/icono-hdd-titulo.png') no-repeat;
+      background-size: 36px 36px;
+      background-position: 0px 0px;
+      border: none;
 
-.invite .right-side{
-  float: left;
-  height: 100%;
-  width: 40%;
-}
+      .title-icon-figure{
 
-.invite .title{
-  float: left;
-  width: 100%;
-  font-size: 45px;
-  color: #fff;
-  font-weight: 900;
-  margin-top: 60px;
-  letter-spacing: 0px;
-  text-align: left;
-}
+      }
+    }
+    .title{
+      font-weight: bold;
+      text-align: left;
+      font-size: 40px;
+      margin-left: 10px;
+    }
 
-.invite .subtitle{
-  float: left;
-  width: 420px;
-  font-size: 17px;
-  color: #fff;
-  margin-top: 40px;
-  line-height: 27px;
-  letter-spacing: 0px;
-  text-align: left;
-}
-
-.emails{
-  float: left;
-  font-size: 15px;
-  font-weight: bold;
-  color: #fff;
-  margin-top: 60px;
-  margin-left: 5px;
-}
-
-.mail-list{
-  float: left;
-  width: 100%;
-  max-height: 235px;
-  margin-top: 9px;
-}
-
-.mail{
-  float: left;
-  width: ~'calc(100% - 23px)';
-  height: 40px;
-  border-radius: 6px;
-  margin-bottom: 15px;
-  background-color: #2c3238;
-  font-size: 17px;
-  color: #fff;
-  padding-left: 20px;
-  border: 1px solid transparent;
-}
-
-.wrong.mail{
-  border: 1px solid red;
-}
-
-.add-mail{
-  float: left;
-  width: ~'calc(100% - 10px)';
-  margin: 10px 10px 0 0;
-  .add-mail-text{
-    float: right;
-    color: #d2dce2;
-    font-size: 15px;
-    cursor: pointer;
   }
-}
 
-.share-button{
-  width: 229px;
-  height: 56px;
-  border-radius: 6px;
-  background-color: #60b25e;
-  transition: all ease 0.19s;
-  position: absolute;
-  bottom: 20px;
-  right: 30px;
-  opacity: 0.7;
+  .preferences-bottom-content-body{
 
-  .share-text{
-    color: #fff;
-    font-weight: bold;
-    font-size: 19px;
-    width: 100%;
-    text-align: center;
-    float: left;
-    margin-top: 18px;
+    .head{
+      display: block;
+      width: 700px;
+      height: 50px;
+      display: grid;
+      top: 190px;
+      position: absolute;
+      text-align: left;
+      left: 70px;
+      color: @gray1;
+    }
+
+    .mail-container{
+      display: block;
+      height: 240px;
+      width: 790px;
+      margin: 0px auto;
+      position: absolute;
+      left: 40px;
+      top: 235px;
+
+      .mail-title{
+        color: @darkHorbito;
+        left: 30px;
+        text-align: left;
+        height: 30px;
+        position: absolute;
+        top: 60px;
+      }
+
+      .mail-list{
+
+        height: 113px;
+        position: absolute;
+        left: 30px;
+        top: 90px;
+
+
+        .mail{
+          float: left;
+          background: white;
+          width: 318px;
+          height: 40px;
+          padding: 0px 20px;
+          -webkit-border-radius: 6px;
+          -moz-border-radius: 6px;
+          border-radius: 6px;
+          background-color: rgb(255, 255, 255);
+          box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.05);
+          color: @darkHorbito;
+          margin-right: 15px;
+          margin-bottom: 15px;
+          border: 2px solid white;
+          transition: all .2s ease;
+        }
+
+        .mail.wrong{
+          border-color: @redHorbitoActive;
+        }
+        .mail.active{
+          border-color: @blueHorbitoActive;
+        }
+      }
+
+      .mail-footer{
+        display: block;
+        height: 30px;
+        color: @gray1;
+        text-align: right;
+        position: absolute;
+        top: 215px;
+        right: 30px;
+      }
+
+    }
+
+    .footer{
+
+      .share-button{
+        height: 45px;
+        width: 190px;
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+
+        span{
+          margin-top: 14px;
+        }
+      }
+    }
   }
+
 }
 
-.share-button.valid{
-  opacity: 1;
-}
-
-.share-button:hover{
-  background-color: #60b25e;
-}
-
-.share-button:active{
-  background-color: #60b25e;
-}
 /* INVITE ZONE FINISH */
 
 /* BACKUP ZONE START */
@@ -4398,123 +4777,3 @@ span.preferences-card-subscribe-text{
 }
 
 /* ABOUT ZONE FINISH */
-
-/* INVITE ZONE START */
-.invite.preferences-bottom-content{
-  width: 100%;
-  height: 100%;
-}
-
-.invite .left-side{
-  float: left;
-  height: 100%;
-  width: ~'calc(60% - 20px)';
-  padding-right: 20px;
-}
-
-.invite .right-side{
-  float: left;
-  height: 100%;
-  width: 40%;
-}
-
-.invite .title{
-  float: left;
-  width: 100%;
-  font-size: 45px;
-  color: #fff;
-  font-weight: 900;
-  margin-top: 60px;
-  letter-spacing: 0px;
-  text-align: left;
-}
-
-.invite .subtitle{
-  float: left;
-  width: 420px;
-  font-size: 17px;
-  color: #fff;
-  margin-top: 40px;
-  line-height: 27px;
-  letter-spacing: 0px;
-  text-align: left;
-}
-
-.emails{
-  float: left;
-  font-size: 15px;
-  font-weight: bold;
-  color: #fff;
-  margin-top: 60px;
-  margin-left: 5px;
-}
-
-.mail-list{
-  float: left;
-  width: 100%;
-  max-height: 235px;
-  margin-top: 9px;
-}
-
-.mail{
-  float: left;
-  width: ~'calc(100% - 23px)';
-  height: 40px;
-  border-radius: 6px;
-  margin-bottom: 15px;
-  background-color: #2c3238;
-  font-size: 17px;
-  color: #fff;
-  padding-left: 20px;
-  border: 1px solid transparent;
-}
-
-.wrong.mail{
-  border: 1px solid red;
-}
-
-.add-mail{
-  float: left;
-  width: ~'calc(100% - 10px)';
-  margin: 10px 10px 0 0;
-  .add-mail-text{
-    float: right;
-    color: #d2dce2;
-    font-size: 15px;
-    cursor: pointer;
-  }
-}
-.share-button{
-  width: 229px;
-  height: 56px;
-  border-radius: 6px;
-  background-color: #60b25e;
-  transition: all ease 0.19s;
-  position: absolute;
-  bottom: 20px;
-  right: 30px;
-  opacity: 0.7;
-
-  .share-text{
-    color: #fff;
-    font-weight: bold;
-    font-size: 19px;
-    width: 100%;
-    text-align: center;
-    float: left;
-    margin-top: 18px;
-  }
-}
-
-.share-button.valid{
-  opacity: 1;
-}
-
-.share-button:hover{
-  background-color: #60b25e;
-}
-
-.share-button:active{
-  background-color: #60b25e;
-}
-/* INVITE ZONE END */
