Cambios pequeños ventana Cuenta

--- a/static/style.css
+++ b/static/style.css
@@ -3280,6 +3280,7 @@ span.preferences-card-subscribe-text{
 
             width: 128px;
             height: 128px;
+            box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2);
             display: inline-block;
             border-radius: 50%;
             overflow: hidden;
@@ -3305,12 +3306,14 @@ span.preferences-card-subscribe-text{
             .avatar-edit{
                 width: 500px;
                 height: 500px;
+                font-size: 13px;
+                font-weight: bold;
                 position: relative;
                 background: @blueHorbito;
                 border-radius: 50%;
-                top: -43px;
+                top: -33px;
                 left: -185px;
-                padding-top: 10px;
+                padding-top: 9px;
                 span{
                   color: white;
                 }
@@ -3336,11 +3339,12 @@ span.preferences-card-subscribe-text{
             color: @blueHorbito;
             position: relative;
             top: 50px;
-            font-size: 22px;
+            font-size: 25px;
+            font-weight: bold;
           }
           .info-name{
-            font-weight: bolder;
-            font-size: 25px;
+            font-weight: 900;
+            font-size: 39px;
             color: @darkHorbito;
             position: relative;
             top: 80px;
