--- a/static/style.css
+++ b/static/style.css
@@ -3067,6 +3067,7 @@ button {
           position: absolute;
           top: -10px;
           left: -10px;
+          cursor: pointer;
         }
       }
       .avatar-info {
