--- a/static/style.css
+++ b/static/style.css
@@ -3857,11 +3857,11 @@ button {
       .mail-container {
         display: block;
         height: 240px;
-        width: 790px;
-        margin: 0px auto;
+        width: 440px;
         position: relative;
         left: 22px;
         top: 45px;
+        float: left;
         .mail-title {
           color: @darkHorbito;
           left: 45px;
@@ -3869,6 +3869,7 @@ button {
           height: 30px;
           position: absolute;
           top: 63px;
+          font-weight: bold;
         }
         .mail-list {
           height: 113px;
@@ -3878,7 +3879,7 @@ button {
           .mail {
             float: left;
             background: #ebebeb;
-            width: 287px;
+            width: 335px;
             height: 39px;
             padding: 0px 20px;
             -webkit-border-radius: 6px;
@@ -3911,23 +3912,30 @@ button {
           text-align: right;
           position: relative;
           top: 208px;
-          right: 72px;
+          right: 34px;
         }
       }
-      .footer {
-        .share-button {
-          height: 46px;
-          width: 189px;
-          position: relative;
-          float: right;
-          bottom: -73px;
-          right: 1px;
-          span {
-            margin-top: 14px;
-            font-size: 17px;
-          }
+
+      .social-networks{
+        width: 224px;
+        float: right;
+        position: relative;
+        right: 75px;
+        top: 138px;
+      }
+      
+      .share-button {
+        height: 46px;
+        width: 189px;
+        position: absolute;
+        bottom: 28px;
+        right: 30px;
+        span {
+          margin-top: 14px;
+          font-size: 17px;
         }
       }
+
     }
   }
   /* INVITE ZONE FINISH */
@@ -4277,3 +4285,118 @@ button {
     .deleteAccount {}
   }
   /* POPUP FINISH*/
+.fb-button{
+  width: 100%;
+  height: 42px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  background-color: #2e568f;
+  background-image: -webkit-linear-gradient(bottom, rgba(0,0,0,.1), rgba(255,255,255,.1)); 
+  background-image: -moz-linear-gradient(bottom, rgba(0,0,0,.1), rgba(255,255,255,.1)); 
+  background-image: -o-linear-gradient(bottom, rgba(0,0,0,.1), rgba(255,255,255,.1)); 
+  background-image: -ms-linear-gradient(bottom, rgba(0,0,0,.1), rgba(255,255,255,.1)); 
+  background-image: linear-gradient(to top, rgba(0,0,0,.1), rgba(255,255,255,.1)); 
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
+  float: left;
+  cursor: pointer;
+  margin-bottom: 18px;
+
+  figure{
+    width: 24px;
+    height: 24px;
+    background-image: url('@static/facebook-onboarding.png');
+    background-size: 24px 24px;
+    display: inline-block;
+    margin-left: 11px;
+    float: left;
+    cursor: pointer;
+  }
+
+  span{
+    font-family: Lato;
+    font-weight: bold;
+    font-size: 15px;
+    color: #ffffff;
+    margin-top: 5px;
+    display: inline-block;
+    cursor: pointer;
+  }
+
+}
+
+.fb-button:hover{
+
+  background-image: -moz-linear-gradient( 90deg, rgb(47,91,153) 0%, rgb(61,114,184) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(47,91,153) 0%, rgb(61,114,184) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(47,91,153) 0%, rgb(61,114,184) 100%);
+
+}
+
+.fb-button:active{
+
+  background-image: -moz-linear-gradient( 90deg, rgb(39,74,125) 0%, rgb(41,84,141) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(39,74,125) 0%, rgb(41,84,141) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(39,74,125) 0%, rgb(41,84,141) 100%);
+
+}
+
+.google-button{
+  width: 100%;
+  height: 42px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  background-color: #fff;
+  border: solid 1px rgba(0,0,0,.1);
+  border-radius: 6px;
+  background-image: -moz-linear-gradient( 90deg, rgb(247,247,247) 0%, rgb(255,255,255) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(247,247,247) 0%, rgb(255,255,255) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(247,247,247) 0%, rgb(255,255,255) 100%);
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
+  float: right;
+  cursor: pointer;
+
+  figure{
+    width: 23px;
+    height: 23px;
+    background-image: url('@static/google-onboarding.png');
+    background-size: 23px 23px;
+    display: inline-block;
+    margin-left: 14px;
+    float: left;
+    cursor: pointer;
+  }
+
+  span{
+    font-family: Lato;
+    font-weight: bold;
+    font-size: 15px;
+    color: #252525;
+    margin-top: 5px;
+    display: inline-block;
+    cursor: pointer;
+  }
+
+}
+
+.google-button:hover{
+
+  background-image: -moz-linear-gradient( 90deg, rgb(250,250,250) 0%, rgb(255,255,255) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(250,250,250) 0%, rgb(255,255,255) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(250,250,250) 0%, rgb(255,255,255) 100%);
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2);
+
+}
+
+.google-button:active{
+
+  background-image: -moz-linear-gradient( 90deg, rgb(255,255,255) 0%, rgb(236,236,236) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(255,255,255) 0%, rgb(236,236,236) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(255,255,255) 0%, rgb(236,236,236) 100%);
+
+}
