--- a/static/style.css
+++ b/static/style.css
@@ -836,7 +836,7 @@ button {
       position: relative;
       bottom: 0px;
       right: 2px;
-      top: 120px;
+      top: 100px;
       text-align: right;
       .ui-btn:hover, .ui-btn:active {
         background: transparent;
@@ -2642,14 +2642,15 @@ button {
           left: 23px;
           text-align: center;
         }
-        .premium-info {
+        .premium-info{
           font-weight: bolder;
-          color: @darkHorbito;
+          color: #252525;
           width: 239px;
-          top: 15px;
+          top: 12px;
           text-align: left;
           position: relative;
-          left: 61px;
+          left: 69px;
+          line-height: 22px;
         }
         .premium-date {
           color: #717171;
@@ -3848,10 +3849,10 @@ button {
         width: 700px;
         height: 50px;
         display: grid;
-        top: 190px;
+        top: 205px;
         position: absolute;
         text-align: left;
-        left: 70px;
+        left: 108px;
         color: @gray1;
       }
       .mail-container {
@@ -3921,7 +3922,7 @@ button {
         float: right;
         position: relative;
         right: 75px;
-        top: 138px;
+        top: 135px;
       }
       
       .share-button {
