--- a/static/style.css
+++ b/static/style.css
@@ -1433,6 +1433,12 @@ button{
     background: url('@static/frase-en.png') no-repeat;
     background-size: 210px auto;
   }
+  &.fullmode-disabled .left{
+    margin: 0 auto;
+  }
+  &.fullmode-disabled .right{
+    display: none;
+  }
 }
 
 .more{
@@ -4395,7 +4401,7 @@ span.preferences-card-subscribe-text{
   margin: 32px auto 20px auto;
   font-size: 21px;
   font-weight: bold;
-  color: #252525;  
+  color: #252525;
 }
 
 .delete-account-popup .options-list{
